<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/lbl_product"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lbl_filter"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_favorite"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/lbl_search_product"
        app:boxStrokeColor="@color/black"
        app:cursorColor="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvDataEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/lbl_data_is_empty"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="gone" />

</LinearLayout>