<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_please_select_filter"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_favorite"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbFavorite"
                style="@style/Widget.App.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbFilterBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/lbl_filter"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>