<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:text="@string/app_name"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/app_name"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_un_favorite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbFavorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/lbl_add_favorite"
            android:textColor="@color/white"
            app:backgroundTint="@color/black" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/lbl_example_money"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

</LinearLayout>